2004-02-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/xml/repr.c (sp_repr_is_cdata): New method
	(sp_repr_new_cdata): Ditto

	* src/xml/repr-io.c (repr_cdata_write): New method
	(sp_repr_svg_read_node): Preserve CDATA
	(sp_repr_write_stream): Ditto

	* src/widgets/sp-xmlview-tree.c (text_content_changed): Support CDATA
	(add_node): Ditto

2004-02-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sodipodi.c (sodipodi_load_config): Translate filenames to OS
	encoding
	(sodipodi_init_config): Ditto

2004-02-04  Michael Schumacher <schumaml@cvs.gnome.org>

	* src/Makefile.am: outdented variables in PLATFORM_WIN32 part

2004-02-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/modules/ps.c: Use arikkei_strlib, fixes comma bug

	* src/libarikkei/arikkei-strlib.c (arikkei_dtoa_simple): Change
	epsilon properly, so skipping zeroes really works now

2004-02-02  Emile Snyder <emile@alumni.reed.edu>

	* src/modules/ps.c (private_sp_module_print_plain_setup_output): New helper
	(sp_module_print_plain_setup_file): Implement

	* src/module.h: Added ::setup_file virtual method

	* src/print.c (sp_print_document): Ditto

2004-02-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/draw-context.c (sp_pencil_context_update_curves): New method
	(sp_pencil_timeout): Ported from dynadraw code
	(sp_pencil_context_root_handler): Use averaged draw and path synthesizer

	* src/helper/bezier-utils.c: Implemented 2-segment path synthesizer

2004-02-02  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/module.c: GnomePrint support without print preview. Is this
	meaningful? At least, we can use PDF printing and PS printing with
	transparency

	* src/Makefile.am: Ditto

2004-02-01  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/xml/repr.c (sp_repr_get_inherited_attr): Removed duplicated
	function

	* src/xml/repr.h: Ditto

	* src/xml/repr-util.c (sp_repr_get_xml_space): Use
	sp_repr_attr_inherited instead

2004-02-01  Mitsuru Oka  <oka326@parkcity.ne.jp>
	